--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongo": "^0.1.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "pug": "^2.0.0-beta6"
   }
 }
