--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongo": "^0.1.0",
+    "mongodb": "^2.2.16",
     "pug": "^2.0.0-beta6",
     "request": "^2.79.0"
   }
