--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "js-sha256": "^0.3.2",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.16",
     "pug": "^2.0.0-beta6",
