--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_success:
   - test $TRAVIS_BRANCH = "master" && tar -czf package.tar.gz --exclude='.git' --exclude='./node_modules'
   - test $TRAVIS_BRANCH = "master" && export SSHPASS=$SERVER_PASS
   - test $TRAVIS_BRANCH = "master" && sshpass -e scp package.tar.gz Noob@$SERVER_HOST:$DEPLOY_PATH
-  - test $TRAVIS_BRANCH = "master" && sshpass -e ssh Noob@$DEPLOY_HOST "cd /var/www/html/node/icu; tar -xzf package.tar.gz; rm package.tar.gz; npm install; echo Fine. Deployed.;"
+  - test $TRAVIS_BRANCH = "master" && sshpass -e ssh Noob@$SERVER_HOST "cd /var/www/html/node/icu; tar -xzf package.tar.gz; rm package.tar.gz; npm install; echo Fine. Deployed.;"
 cache:
   apt: true
   directories:
